Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102179

QDoc does not find any header file when headers.fileextensions is not declared

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.4.0 Beta1
    • 6.3
    • Build tools: qdoc
    • None
    • 8ae6e52bfe (qt/qttools/dev) 8ae6e52bfe (qt/tqtc-qttools/dev)
    • DaVinci sprint 53

      The documentation for QDoc states that headers.fileextensions defaults to some values which, for example, would find header files with a ".h" extensions.

       

      Building a minimal project with an header file, let it be test.h, declaring a simple class, a qdoc or cpp file declaring some simple documentation for that class, let it be test.qdoc, and with the following minimal configuration, all siblings in the same directory:

      project = Test
      moduleheader = test.h
      sources = test.qdoc
      
      headerdirs = .
      includepaths = .
      

      And calling QDoc on the configuration file, will generate a warning that the class that is being documented cannot be found in any header file.

      Using the `-debug` flag, we can see that QDoc does not parse the header file at all.

      Adding an `headers.fileextensions = "*.h"` to the configuration will remove the warning and have QDoc parse the header file.

      Standing by the documentation, it shouldn't be required to declare any fileextensions as an `.h` file should be found by the default values for it. 

        For Gerrit Dashboard: QTBUG-102179
        # Subject Branch Project Status CR V

            diseraluca Luca Di Sera
            diseraluca Luca Di Sera
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes